updates to include search for OBs and tableview
